added user entity;